crates/solidity/testing/snapshots/bindings_output/errors/revert_stmt/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:2:23]
   │
 2 │     error InvalidState();
   │                       ─┬  
   │                        ╰── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:5:28]
   │
 5 │         revert InvalidState();
   │                            ─┬  
   │                             ╰── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
    ╭─[input.sol:10:21]
    │
 10 │         revert Utils.GenericError(code);
    │                     ─────────┬─────────  
    │                              ╰─────────── Error occurred here.
────╯
Error: Expected Equal or Semicolon.
    ╭─[input.sol:17:23]
    │
 17 │     error GenericError(int code);
    │                       ─────┬────  
    │                            ╰────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     error InvalidState();
    │     ──┬── ──────┬─────  
    │       ╰───────────────── unresolved
    │                 │       
    │                 ╰─────── name: 2
    │ 
  4 │     function testRevert() public {
    │              ─────┬────  
    │                   ╰────── name: 3
  5 │         revert InvalidState();
    │         ───┬── ──────┬─────  
    │            ╰───────────────── ref: built-in
    │                      │       
    │                      ╰─────── name: 4
    │ 
  8 │     function testOtherRevert() public {
    │              ───────┬───────  
    │                     ╰───────── name: 5
  9 │         int code = 10;
    │             ──┬─  
    │               ╰─── name: 6
 10 │         revert Utils.GenericError(code);
    │         ───┬── ──┬──  
    │            ╰────────── ref: built-in
    │                  │    
    │                  ╰──── name: 7
    │ 
 16 │ library Utils {
    │         ──┬──  
    │           ╰──── name: 8
 17 │     error GenericError(int code);
    │     ──┬── ──────┬─────  
    │       ╰───────────────── unresolved
    │                 │       
    │                 ╰─────── name: 9
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭───────▶ contract Test {
  2 │ │   │         error InvalidState();
    │ │   │     ─────────────┬────────────  
    │ │   │                  ╰────────────── definiens: 2
  3 │ │   ╭───▶ 
    ┆ ┆   ┆     
  5 │ │   │             revert InvalidState();
    │ │   │     ───────────────┬───────────────  
    │ │   │                    ╰───────────────── definiens: 4
  6 │ │ │ ├───▶     }
    │ │ │ │             
    │ │ │ ╰───────────── definiens: 3
  7 │ │ ╭─────▶ 
    ┆ ┆ ┆       
  9 │ │ │               int code = 10;
    │ │ │       ───────────┬───────────  
    │ │ │                  ╰───────────── definiens: 6
 10 │ │ │               revert Utils.GenericError(code);
    │ │ │       ────────────────────┬────────────────────  
    │ │ │                           ╰────────────────────── definiens: 7
 11 │ │ ├─────▶     }
    │ │ │               
    │ │ ╰─────────────── definiens: 5
    ┆ ┆         
 14 │ ├─────│ ▶ }
    │ │     │       
    │ ╰───────────── definiens: 1
 15 │       ╭─▶ 
    ┆       ┆   
 17 │       │       error GenericError(int code);
    │       │   ─────────────────┬────────────────  
    │       │                    ╰────────────────── definiens: 9
 18 │       ├─▶ }
    │       │       
    │       ╰─────── definiens: 8
────╯
